--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,7 @@ ACLOCAL_AMFLAGS = -I m4
 lib_LTLIBRARIES = libalgae.la
 
 libalgae_la_SOURCES = \
+	libalgae/binding-c.cc \
 	libalgae/colour.cc \
 	libalgae/colour.h \
 	libalgae/display.cc \
